--- a/frontend/confirm.html
+++ b/frontend/confirm.html
@@ -21,11 +21,11 @@
         <div class =" container">
             <div class="row">
                 <nav class="navbar navbar-expand navbar-light">
-                  <a class="navbar-brand" href="frontend/index.html"><img src="backend/images/logoori.png" id="logo" alt='logo orinoco' /> </a>
+                  <a class="navbar-brand" href="index.html"><img src="backend/images/logoori.png" id="logo" alt='logo orinoco' /> </a>
                    
                         <ul class="navbar-nav">
                             <li class="nav-item active">
-                              <a class="nav-link" href="frontend/index.html"><i class="fas fa-home"></i> Home</a>
+                              <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="frontend/panier.html"><i class="fas fa-shopping-cart"></i> Basket</a>
