--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <nav class=" navbar navbar-expand navbar-light">
 
-                  <a class="navbar-brand" href="index.html"><img src="backend/images/logoori.png" id="logo" alt='logo orinoco' /> </a>
+                  <a class="navbar-brand" href="index.html"><img src="/backend/images/logoori.png" id="logo" alt='logo orinoco' /> </a>
                         <ul class="navbar-nav">
                             <li class="nav-item active ">
                               <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
