--- a/confirm.html
+++ b/confirm.html
@@ -6,9 +6,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="frontend/bootstrap.css" />
+    <link rel="stylesheet" href="bootstrap.css" />
 
-    <link rel="stylesheet" href="frontend/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 
 
@@ -28,7 +28,7 @@
                               <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="frontend/panier.html"><i class="fas fa-shopping-cart"></i> Basket</a>
+                              <a class="nav-link" href="basket.html"><i class="fas fa-shopping-cart"></i> Basket</a>
                             </li>
                           </ul>
                     
@@ -67,8 +67,8 @@
               </div>
             </div>
     </footer>
-    <script  src="frontend/confirm.js"></script>
-    <script src="frontend/bootstrap.bundle.js"></script>
+    <script  src="confirm.js"></script>
+    <script src="bootstrap.bundle.js"></script>
 </body>
 
 </html>
