--- a/basket.html
+++ b/basket.html
@@ -6,9 +6,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="frontend/bootstrap.css" />
+    <link rel="stylesheet" href="bootstrap.css" />
 
-    <link rel="stylesheet" href="frontend/style.css" />
+    <link rel="stylesheet" href="style.css" />
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 
 
@@ -29,7 +29,7 @@
                               <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="frontend/basket.html"><i class="fas fa-shopping-cart"></i> Basket</a>
+                              <a class="nav-link" href="basket.html"><i class="fas fa-shopping-cart"></i> Basket</a>
                             </li>
                           </ul>
                 </nav>
@@ -108,8 +108,8 @@
               </div>
             </div>
     </footer>
-    <script src="frontend/basket.js"></script>
-    <script src="frontend/bootstrap.bundle.js"></script>
+    <script src="basket.js"></script>
+    <script src="bootstrap.bundle.js"></script>
 </body>
 
 </html>
