--- a/produit.html
+++ b/produit.html
@@ -9,8 +9,8 @@
 
     <meta name="description" content="Best place to purchase a Unique and Original wooden furniture">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="frontend/bootstrap.css"/>
-    <link rel="stylesheet" href="frontend/style.css" />
+     <link rel="stylesheet" href="bootstrap.css"/>
+    <link rel="stylesheet" href="style.css" />
    
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 
@@ -24,13 +24,13 @@
             <div class="row">
                 <nav class=" navbar navbar-expand navbar-light">
 
-                  <a class="navbar-brand" href="index.html"><img src="/backend/images/logoori.png" id="logo" alt='logo orinoco' /> </a>
+                  <a class="navbar-brand" href="index.html"><img src="backend/images/logoori.png" id="logo" alt='logo orinoco' /> </a>
                         <ul class="navbar-nav">
                             <li class="nav-item active ">
                               <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
                             </li>
                             <li class="nav-item ">
-                              <a class="nav-link" href="frontend/basket.html"> <i class="fas fa-shopping-cart"></i> Basket</a>
+                              <a class="nav-link" href="basket.html"> <i class="fas fa-shopping-cart"></i> Basket</a>
                             </li>
                           </ul>
                     
@@ -69,8 +69,8 @@
               </div>
             </div>
     </footer>
-    <script src='frontend/produit.js'></script>
-    <script src='frontend/bootstrap.bundle.js'></script>
+    <script src='produit.js'></script>
+    <script src='bootstrap.bundle.js'></script>
 
 </body>
 
