--- a/basket.html
+++ b/basket.html
@@ -62,12 +62,12 @@
     <form class="row g-3" id="myForm" >
       <div class="col-md-4">
         <label for="firstName" class="form-label">First name</label>
-        <input type="text" name="firstName" class="form-control" id="firstName" placeholder="Ex:Jean" pattern="[A-Za-z]" required>
+        <input type="text" name="firstName" class="form-control" id="firstName" placeholder="Ex:Jean"  required>
   
       </div>
       <div class="col-md-4">
         <label for="lastName" class="form-label">Last name</label>
-        <input type="text" name ="lastName" class="form-control" id="lastName" placeholder="Ex:Dupont" pattern="[A-Za-z]" required>
+        <input type="text" name ="lastName" class="form-control" id="lastName" placeholder="Ex:Dupont"  required>
      
       </div>
   
