--- a/confirm.html
+++ b/confirm.html
@@ -1,7 +1,7 @@
 <!-- PAGE CONFIRMATION -->
 
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 
 
 <head>
@@ -48,7 +48,7 @@
       <p><span class="title-product"> See you soon!</span> </p>
            
       <div class="col-12">
-        <button id ="clearButton" class="btn btn-primary" type="">Reset order</button>
+        <button id ="clearButton" class="btn btn-primary" type="button">Reset order</button>
       </div>
       </div>
    </main>
