modif image confirm

--- a/confirm.html
+++ b/confirm.html
@@ -40,7 +40,7 @@
    <main class="container" id="main">
     <h1>Orinoco Wooden Furniture</h1>
     <div>
-      <img src="backend/images/thx2.png" alt="thank's message"/>
+      <img src="backend/images/thx2.png" class="card-img-top" alt="thank's message"/>
     </div>
     <div class="border border-warning rounded shadow-lg my-5 py-2 text-center">
       <p id="orderId"></p>
