test panier vide

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
             <div class="card ">
                 <div id="cardBody" class="card-body">
-                  <img src=".." alt="image produit" class="card-img-top" id="card__img"> 
+                  <img src=".." alt="image produit"  id="card__img"> 
                   <h5 id="card__title" class="card-title">Card title</h5>
                   <p id="card__body" class="card-text">Description</p>
                   <p id="card__price" class="card-text">Price</p>  
