test panier vide

--- a/basket.html
+++ b/basket.html
@@ -89,7 +89,7 @@
       </div>
      
       <div class="col-12">
-        <button id ="submitButton" class="btn btn-primary" type="submit">Submit form</button>
+        <button id ="submitButton" class="btn btn-primary" disabled="true" type="submit">Submit form</button>
       </div>
     </form>
    </main>
