--- a/basket.html
+++ b/basket.html
@@ -62,7 +62,7 @@
     <form class="row g-3" id="myForm" >
       <div class="col-md-4">
         <label for="firstName" class="form-label">First name</label>
-        <input type="text" name="firstName" class="form-control" id="firstName" placeholder="Ex:Jean" pattern="[a-zA-Z0-9\s,'-./()]" required>
+        <input type="text" name="firstName" class="form-control" id="firstName" placeholder="Ex:Jean" pattern="[a-zA-ZÀ-ÿ]" required>
   
       </div>
       <div class="col-md-4">
