--- a/basket.html
+++ b/basket.html
@@ -73,12 +73,12 @@
   
       <div class="col-md-6">
         <label for="address" class="form-label">Address</label>
-        <input type="text"  name="address" class="form-control" id="address"  required>
+        <input type="text"  pattern="[a-zA-Z]+[ -]?[a-zA-Z]+"  name="address" class="form-control" id="address"  required>
 
       </div>
       <div class="col-md-6">
         <label for="city" class="form-label">City</label>
-        <input type="text" name="city"  class="form-control" id="city"  required>
+        <input type="text"  pattern="[a-zA-Z]+[ -]?[a-zA-Z]+" name="city"  class="form-control" id="city"  required>
  
       </div>
      
