--- a/basket.html
+++ b/basket.html
@@ -78,7 +78,7 @@
       </div>
       <div class="col-md-6">
         <label for="city" class="form-label">City</label>
-        <input type="text"  pattern="[a-zA-Z]+[ -]?[a-zA-Z]+" name="city"  class="form-control" id="city"  required>
+        <input type="text"  pattern="[a-zA-Z0-9]+[ -]?[a-zA-Z]+[ -]?[a-zA-Z]" name="city"  class="form-control" id="city"  required>
  
       </div>
      
